--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             class="form-control" name="" id="soNgay" aria-describedby="helpId" placeholder="">
           <!-- <small id="helpId" class="form-text text-muted">Help text</small> -->
         </div>
-        <button class="btn btn-info" id="tinhTong" onclick="tinhLuong ()">LƯƠNG VỀ!</button>
+        <button class="btn btn-info" id="tinhTong" onclick="tinhLuong ()">TÍNH NGÀY LƯƠNG Ở ĐÂY!</button>
         <div class="bg-info bg-opacity-75 p-2 text-dark mt-3"></div>
     </div>
     <!-- Hết bài 1 -->
@@ -62,7 +62,7 @@
             class="form-control" name="" id="usd" aria-describedby="helpId" placeholder="">
           <!-- <small id="helpId" class="form-text text-muted">Help text</small> -->
         </div>
-        <button class="btn btn-success" id="tinhTien" onclick="quyDoi ()">Quy đổi nào!</button>
+        <button class="btn btn-success" id="tinhTien" onclick="quyDoi ()">Quy đổi ở đây!</button>
         <div class="bg-success bg-opacity-75 p-2 text-dark mt-3"></div>
     </div>
     <!-- Hết bài 3 -->
@@ -80,8 +80,8 @@
             class="form-control" name="" id="height" aria-describedby="helpId" placeholder="">
           <!-- <small id="helpId" class="form-text text-muted">Help text</small> -->
         </div>
-        <button class="btn btn-danger" id="tinhTien" onclick="dienTich ()">Tính diện tích ở đây nhé!</button>
-        <button class="btn btn-primary" id="tinhTien" onclick="chuVi ()">Tính chu vi ở đây nhé!</button>
+        <button class="btn btn-danger" id="tinhTien" onclick="dienTich ()">Tính diện tích ở đây !</button>
+        <button class="btn btn-primary" id="tinhTien" onclick="chuVi ()">Tính chu vi ở đây !</button>
         <div class="bg-danger bg-opacity-75 p-2 text-dark mt-3"></div>
         <div class="bg-primary bg-opacity-75 p-2 text-dark mt-3"></div>
     </div>
